--- a/树状数组+线段树 .md
+++ b/树状数组+线段树 .md
@@ -24,7 +24,7 @@
 
 树状数组的特性可以从下面的图来理解
 
-![image-20260128014216617](./../AppData/Roaming/Typora/typora-user-images/image-20260128014216617.png)
+![](https://cdn.amiracle.site/111.png)
 
 树状数组下标一般从 1 开始
 
@@ -34,6 +34,18 @@ ${lowbit}$ 为最低位的 1 的大小 , 如 lowbit(00110**1**0) = 2 , lowbit(01
 
 **第一步**首先是求前缀和
 **然后**差分思想，用前缀和的求区间和
+
+query(x) 就是求 a[1, x] 的前缀和
+query(r) - query(l-1) = a[l, r]
+
+
+
+i-lowbit(i) 即为左上的节点
+i+lowbit(i) 即为右上的节点
+
+
+
+add() , query()
 
 
 
@@ -182,6 +194,76 @@ void solve(){
 比如 `5 10 2 2 1 3` 
 可以离散化成 `4 5 2 2 1 3`
 
+### 树状数组 单点查询区间加(o(log))
+
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+using ll = long long;
+
+#include <bits/stdc++.h>
+using namespace std;
+using ll = long long;
+
+// BIT | Fenwick
+struct BIT{
+	int n;
+	vector<ll> tree;
+	void init(int _n){
+		n = _n;
+		tree = vector<ll>(n + 1);
+	}
+	void add(int x, ll k){
+		for(int i=x; i<=n; i+=i&-i){
+			tree[i] += k;
+		}
+	}
+	ll query(int x){
+		ll ans = 0;
+		for(int i=x; i>=1; i-=i&-i){
+			ans += tree[i];
+		}
+		return ans;
+	}
+	// 差分求[x, y]区间和 
+	ll query(int x, int y){
+		if(x > y) return 0;
+		return query(y) - query(x-1);
+	}
+};
+
+int main(){
+	int n, m;
+	cin >> n >> m;
+	
+	BIT bit;
+	bit.init(n+1);
+	
+	for(int i=1; i<=n; i++){
+		int x; cin >> x;
+		bit.add(i, x); // [i, i] + x
+		bit.add(i+1, -x);
+	}
+	
+	for(int i=1; i<=m; i++){
+		int op; cin >> op;
+		if(op == 1){
+			int l, r; ll x;
+			cin >> l >> r >> x;
+			bit.add(l, x);
+			bit.add(r+1, -x);
+		}
+		if(op == 2){
+			int x;
+			cin >> x;
+			cout << bit.query(x) << '\n';
+		}
+	}
+}
+```
+
+
+
 
 
 ## 线段树 (SegmentTree)
@@ -194,7 +276,11 @@ void solve(){
 
 **可以:** `O(logn)`**单点修改** + `O(logn)` **区间求和**
 
-![image-20260128024505124](./../AppData/Roaming/Typora/typora-user-images/image-20260128024505124.png)
+![](C:\Users\Administrator\Desktop\222.png)
+
+当前节点编号是 **p**
+**2 * p**  即左子节点
+**2 * p+1** 即右子节点编号
 
 ##### 参考代码
 
@@ -202,7 +288,7 @@ void solve(){
 struct SegTree{
     int n;
     vector<ll> a;
-    vector<ll> sum;
+    vector<ll> sum; // p - [l, r]    sum[p] -> a[l, r] 的区间和
 
     #define lp (p << 1)
     #define rp (p << 1 | 1)
@@ -233,20 +319,20 @@ struct SegTree{
         pull(p);
     }
     
-    // 单点修改
+    // 单点修改 a[x] + v
     void update(int p, int l, int r, int x, ll v){ 
         if(l == r){
             sum[p] += v;
             return;
         }
-
+		
         int mid = l + r >> 1;
         if(x <= mid) update(lp, l, mid, x, v);
         else update(rp, mid + 1, r, x, v);
         pull(p);
     }
 
-    // 区间查询
+    // 区间查询 查询 a[x, y] 的区间和
     ll query(int p, int l, int r, int x, int y){
         if(x <= l && r <= y) return sum[p];
 
@@ -358,7 +444,7 @@ struct SegTree{
 
 #### **懒标记线段树**
 
-**可以:** **区间加 + 区间查**
+**可以:** **区间加 + 区间查** o(log)
 
 线段树有很多模块，写什么模块就有什么功能
 
@@ -402,7 +488,7 @@ struct SegTree{
     void push(int p, int l, int r){
         if(add[p] == 0) return;
         int mid = l + r >> 1;
-        lazy(lp, lk, add[p]);
+        lazy(lp, lk, add[p]); // 更新子的 sum 和 tag
         lazy(rp, rk, add[p]);
         add[p] = 0;
     }
@@ -437,8 +523,8 @@ struct SegTree{
 
         ll ans = 0;
         int mid = (l + r) >> 1;
-        push(p, l, r);
-
+        push(p, l, r); // 分发信息
+        
         if(x <= mid) ans += query(lp, l, mid, x, y);
         if(y >= mid + 1) ans += query(rp, mid + 1, r, x, y);
 
